# sapien-vulkan

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: main.cpp
glsl/: axis.vert  composite.frag  composite_depth.frag  composite_normal.frag  deferred.frag  deferred_depth.frag  deferred_normal.frag  deferred_shadow.frag  gbuffer.frag  gbuffer.vert  shadow.vert  transparency.frag  transparency.vert
include/sapien_vulkan/: camera.h  camera_controller.h  light.h  object.h  scene.h  uniform_buffers.h
include/sapien_vulkan/common/: fs.h  glm_common.h  log.h
include/sapien_vulkan/data/: geometry.hpp
include/sapien_vulkan/gui/: gui.h  gui.hpp  imgui_util.hpp
include/sapien_vulkan/internal/: vulkan.h  vulkan_buffer.h  vulkan_context.h  vulkan_image.h  vulkan_material.h  vulkan_mesh.h  vulkan_object.h  vulkan_renderer.h  vulkan_renderer_config.h  vulkan_renderer_for_editor.h  vulkan_resources_manager.h  vulkan_scene.h  vulkan_util.h
include/sapien_vulkan/pass/: axis.h  composite.h  deferred.h  gbuffer.h  shadow.h  transparency.h
spv/: composite.frag.spv  deferred.frag.spv  gbuffer.frag.spv  gbuffer.vert.spv  transparency.frag.spv  transparency.vert.spv
src/: camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  gui.hpp  imgui_util.hpp  imgui_window.hpp  light.h  main.cpp  object.cpp  object.h  scene.cpp  scene.h  uniform_buffers.h  vulkan_context.cpp  vulkan_context.h  vulkan_material.cpp  vulkan_material.h  vulkan_object.cpp  vulkan_object.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_scene.cpp  vulkan_scene.h
src/camera/: camera.cpp  camera.h
src/common/: fs.cpp  glm_common.h  log.cpp  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_image.cpp  vulkan_image.h  vulkan_mesh.cpp  vulkan_mesh.h  vulkan_texture.cpp  vulkan_texture.h  vulkan_util.cpp  vulkan_util.h
src/gui/: gui.cpp  gui.hpp
src/internal/: vulkan_buffer.cpp  vulkan_context.cpp  vulkan_image.cpp  vulkan_material.cpp  vulkan_mesh.cpp  vulkan_object.cpp  vulkan_renderer.cpp  vulkan_renderer_for_editor.cpp  vulkan_resources_manager.cpp  vulkan_scene.cpp  vulkan_texture.cpp  vulkan_util.cpp
src/pass/: axis.cpp  common.h  composite.cpp  deferred.cpp  deferred.h  gbuffer.cpp  gbuffer.h  shadow.cpp  transparency.cpp
